# pics-trigger

./: .gitignore  CMakeLists.txt  README.md
inc/: Parameters.hpp  SpriteSheet.hpp  TextureManager.hpp  hashUtils.hpp  pics-trigger.hpp
src/: Parameters.cpp  SpriteSheet.cpp  TextureManager.cpp  main.cpp  picstrigger.cpp
